# G-Xin

./: README.md
LeetCode/: test.c
LeetCode/merge_88/: run_tests.sh
LeetCode/merge_88/cpp-test/: CMakeLists.txt
LeetCode/merge_88/cpp-test/src/: main.cpp
LeetCode/merge_88/cpp-test/tests/: test.cpp
LeetCode/merge_88/python-test/: merge.py  test_merge.py
LeetCode/merge_88/rust-test/src/: lib.rs
LeetCode/removeElement_27/: run_tests.sh
LeetCode/removeElement_27/cpp-test/: CMakeLists.txt
LeetCode/removeElement_27/cpp-test/src/: main.cpp
LeetCode/removeElement_27/cpp-test/tests/: test.cpp
LeetCode/removeElement_27/python-test/: removeElement.py  test_removeElement.py
LeetCode/remove_duplicates_26/: run_tests.sh
LeetCode/remove_duplicates_26/cpp-test/: CMakeLists.txt
LeetCode/remove_duplicates_26/cpp-test/src/: main.cpp
LeetCode/remove_duplicates_26/cpp-test/tests/: test.cpp
LeetCode/remove_duplicates_26/python-test/: remove_duplicates.py  test_remove_duplicates.py
bloom_tokenizers/: 1.py  2.cpp  a.out  tokenization.cpp  tokenization.h
document/: Debug.md  tutorial.md  分词器.md
pro/1.C语言/: 1.my_printf.c  2.main.c  3.LOG.c  a.out  test.c
pro/2.OJ/: 1.c  100.c  101.c  102.c  103.c  104.c  105.c  106.c  107.c  108.c  109.c  110.c  111.c  112.c  113.c  114.c  115.c  116.c  117.c  118.c  119.c  120.c  121.c  122.c  123.c  124.c  125.c  126.c  127.c  128.c  129.c  130.c  131.c  132.c  133.c  134.c  135.c  136.c  137.c  138.c  (+31 more)
pro/2.OJ/90/: 90-1.c  90.c  a.out
pro/3.欧拉/: 10.c  35.c  37.c  a.out
pro/3.欧拉/7/: 7-1.c  7.c
pro/4.算法/: 1.NewTow.c  2.最长的名字.c  3.权限修改.c  4.c  a.out
pro/5.项目/1.dictionary/: 1.eledic.c  a.out  dict.txt
pro/5.项目/2.ls/: 1.myls.c  myls
pro/5.项目/3.shell/: 1.myshell.c  a.out  a.txt  myshell
pro/5.项目/4.pipe/: 1.pipe.c  a.out
pro/5.项目/5.pthread/: 1.pthread.c  a.out
pro/5.项目/6.pthread_pool/: 1.pthread_pool.c  2.pool.h  3.head.h  4.pool.c  a.out  a.txt
pro/6.LeetCode/: a.out
pro/6.LeetCode/1.剑指_1/: 10.cpp  11.cpp  12.cpp  14.cpp  15.cpp  16.cpp  18.cpp  21.cpp  45.cpp  5.cpp  50.cpp  56.cpp  56_2.cpp  6.cpp  61.cpp  a.out
pro/6.LeetCode/2.剑指_2/: 1.txt  10.cpp  11.cpp  12.cpp  14.cpp  16.cpp  19.cpp  2.cpp  3.cpp  33.cpp  34.cpp  34.s  35.cpp  35.s  36.cpp  36.s  7.cpp  73.cpp  74.cpp  8.cpp  9.cpp  a.out
pro/7.脚本/: 1.first.sh  1.sh  10.for.sh  11.while.sh  12.until.sh  2.var.sh  3.loc_var.sh  4.read.sh  5.func.sh  6.func_1.sh  7.if.sh  8.case.sh  9.for.sh
pro/8.数据结构/: 1.linear_table.c  2.list.c  a.out
project/AI_gomoku/: CMakeLists.txt  main  main.cpp
project/AI_gomoku/include/: AI.h  Chess.h  ChessGame.h  Man.h
project/AI_gomoku/src/: AI.cpp  Chess.cpp  ChessGame.cpp  Man.cpp
project/GuessingGame/src/: main.rs
project/Soldier_raid/: CMakeLists.txt  main  main.cpp
project/Soldier_raid/include/: Gun.h  Soldier.h
project/Soldier_raid/src/: Gun.cpp  Soldier.cpp
project/bloom_tokenizer/: tokenization.cpp  tokenization.h
project/gcc_demo_swap/: main.cpp  sharemain  staticmain  swap
project/gcc_demo_swap/include/: swap.h
project/gcc_demo_swap/src/: swap.cpp
project/gdb_sum/: a_no_g  a_yes_g  sum.cpp
project/helloworld/: CMakeLists.txt  helloworld.cpp
project/json/: CMakeLists.txt  README.md  a.out  main  main.c
project/json/include/: leptjson.h
project/json/src/: leptjson.c
project/rust/my-redis/: Cargo.toml
project/rust/rust_test/: Cargo.toml
project/rust/rust_todo_list/: .rodorc
project/rust/rust_todo_list/rust_todo_list_optimize/: Cargo.toml
project/rust/rust_todo_list/rust_todo_list_optimize/src/: cli.rs  commands.rs  database.rs  main.rs
project/rust_todo_list/: Cargo.toml
project/rust_todo_list/rust_todo_list_edition/: Cargo.toml
project/rust_todo_list/rust_todo_list_optimize/: Cargo.toml
project/rust_todo_list/src/: cli.rs  database.rs  main.rs
project/swap/: CMakeLists.txt  main.cpp
project/swap/include/: swap.h
project/swap/src/: swap.cpp
rust/: 17_genericity.rs  18_character.rs  20_list.rs  22_concurrence.rs  24_display.rs  40_Iterator.rs  43_mod.rs  Instuctions.md
(+35 files in other folders)
