[package]
name = "rust_todo_list_optimize"
version = "0.1.1"
edition = "2021"
description = "Rodo is a simple todo list manager."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dirs = "5.0.0"